@startuml
'https://plantuml.com/sequence-diagram
left to right direction
entity Author {
    *id: Integer <<PK>>
    ---
    *firstname: String
    *lastname: String
    bio: Text
}
entity Book {
    *id: Integer <<PK>>
    ---
    *title: String
    *published: Year
    *price: Double
    image: Blob
    category_id: id <<FK>>
}
entity Category {
    *id: Integer
    ---
    *name: String
    description: String
}
Author }|--o{ Book
note top on link #orange
Many-to-Many
end note
Book }o--|| Category
@enduml